--- a/Backend/package.json
+++ b/Backend/package.json
@@ -4,8 +4,13 @@
   "description": "Gestor de Alquiler Herramientas-Backend",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon index.js",
+    "start": "node index.js"
+    
   },
   "author": "Grupo 3 TICS",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "firebase-admin": "^10.0.0"
+  }
 }
