adicionar metodo post
faltaba instalar express

--- a/Backend/package.json
+++ b/Backend/package.json
@@ -6,11 +6,11 @@
   "scripts": {
     "dev": "nodemon index.js",
     "start": "node index.js"
-    
   },
   "author": "Grupo 3 TICS",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.17.1",
     "firebase-admin": "^10.0.0"
   }
 }
